[gd_scene load_steps=2 format=3 uid="uid://bhmq6su4odk6"]

[ext_resource type="Script" path="res://BadGrass/RewardManager.gd" id="1_3ao64"]

[node name="RewardManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_3ao64")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 6.0
offset_right = -4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 110.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Option1" type="Control" parent="CanvasLayer/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option1"]
custom_minimum_size = Vector2(100, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -360.0
offset_right = 197.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.219608, 0.219608, 0.219608, 0.898039)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option1/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option1/ColorRect/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option1/ColorRect/MarginContainer/Control"]
layout_mode = 0
offset_right = 380.0
offset_bottom = 300.0
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true

[node name="Button" type="Button" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option1/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 72
text = "Select"

[node name="Option2" type="Control" parent="CanvasLayer/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option2"]
custom_minimum_size = Vector2(100, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -360.0
offset_right = 197.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.219608, 0.219608, 0.219608, 0.898039)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option2/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option2/ColorRect/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option2/ColorRect/MarginContainer/Control"]
layout_mode = 0
offset_right = 380.0
offset_bottom = 300.0
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true

[node name="Button" type="Button" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option2/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 72
text = "Select"

[node name="Option3" type="Control" parent="CanvasLayer/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option3"]
custom_minimum_size = Vector2(100, 160)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -360.0
offset_right = 197.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.219608, 0.219608, 0.219608, 0.898039)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option3/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option3/ColorRect/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option3/ColorRect/MarginContainer/Control"]
layout_mode = 0
offset_right = 380.0
offset_bottom = 300.0
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true

[node name="Button" type="Button" parent="CanvasLayer/Control/MarginContainer/HBoxContainer/Option3/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 72
text = "Select"
